--- a/Core/View/About.html.twig
+++ b/Core/View/About.html.twig
@@ -80,7 +80,7 @@
                                         <h6 class="mb-1">{{ trans('users') }}</h6>
                                         <p class="mb-0">
                                             {% set userCount = fsc.data.limits.users is defined ? fsc.data.limits.users : 0 %}
-                                            {% set userLimit = config('max_users') %}
+                                            {% set userLimit = config('user_limit') %}
                                             <strong>{{ userCount }}</strong>
                                             / {% if userLimit %}{{ userLimit }}{% else %}∞{% endif %}
                                         </p>
@@ -92,7 +92,7 @@
                                         <h6 class="mb-1">{{ trans('products') }}</h6>
                                         <p class="mb-0">
                                             {% set productCount = fsc.data.limits.products is defined ? fsc.data.limits.products : 0 %}
-                                            {% set productLimit = config('max_products') %}
+                                            {% set productLimit = config('product_limit') %}
                                             <strong>{{ productCount }}</strong>
                                             / {% if productLimit %}{{ productLimit }}{% else %}∞{% endif %}
                                         </p>
@@ -104,7 +104,7 @@
                                         <h6 class="mb-1">{{ trans('customers') }}</h6>
                                         <p class="mb-0">
                                             {% set customerCount = fsc.data.limits.customers is defined ? fsc.data.limits.customers : 0 %}
-                                            {% set customerLimit = config('max_customers') %}
+                                            {% set customerLimit = config('customer_limit') %}
                                             <strong>{{ customerCount }}</strong>
                                             / {% if customerLimit %}{{ customerLimit }}{% else %}∞{% endif %}
                                         </p>
@@ -116,7 +116,7 @@
                                         <h6 class="mb-1">{{ trans('invoices') }}</h6>
                                         <p class="mb-0">
                                             {% set invoiceCount = fsc.data.limits.invoices is defined ? fsc.data.limits.invoices : 0 %}
-                                            {% set invoiceLimit = config('max_invoices') %}
+                                            {% set invoiceLimit = config('invoice_limit') %}
                                             <strong>{{ invoiceCount }}</strong>
                                             / {% if invoiceLimit %}{{ invoiceLimit }}{% else %}∞{% endif %}
                                         </p>
