agregar fecha del servidor a la pagina About

--- a/Core/View/About.html.twig
+++ b/Core/View/About.html.twig
@@ -218,6 +218,10 @@
                                         <strong>{{ trans('operating-system') }}:</strong>
                                         {{ fsc.data.os_info }}
                                     </p>
+                                    <p class="mb-0">
+                                        <strong>{{ trans('date') }}:</strong>
+                                        {{ fsc.data.server_date }}
+                                    </p>
                                 </div>
                             </div>
                         </div>
