añadido el codigo para mostrar las subcuentas en los informes de impuestos

--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -298,6 +298,15 @@
                                         </label>
                                     </div>
                                 </div>
+                                <div class="col-sm-4 col-md-3 col-lg-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_subaccount"
+                                               id="column_subaccount" checked>
+                                        <label class="form-check-label" for="column_subaccount">
+                                            {{ trans('subaccount') }}
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="card-footer d-flex gap-2">
