Pequeñas correcciones al informe de impuestos.

--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -172,10 +172,18 @@
                                 <div class="col-sm-4 col-md-3 col-lg-2">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="1"
-                                               name="column_numsupplier"
-                                               id="column_numsupplier" checked>
+                                               name="column_numsupplier" id="column_numsupplier" checked>
                                         <label class="form-check-label" for="column_numsupplier">
                                             {{ trans('numsupplier') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-4 col-md-3 col-lg-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_subaccount" id="column_subaccount" checked>
+                                        <label class="form-check-label" for="column_subaccount">
+                                            {{ trans('subaccount') }}
                                         </label>
                                     </div>
                                 </div>
@@ -245,8 +253,7 @@
                                 <div class="col-sm-4 col-md-3 col-lg-2">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="1"
-                                               name="column_pct_surcharge"
-                                               id="column_pct_surcharge" checked>
+                                               name="column_pct_surcharge" id="column_pct_surcharge" checked>
                                         <label class="form-check-label" for="column_pct_surcharge">
                                             {{ trans('pct-surcharge') }}
                                         </label>
@@ -282,8 +289,7 @@
                                 <div class="col-sm-4 col-md-3 col-lg-2">
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="1"
-                                               name="column_supplied_amount"
-                                               id="column_supplied_amount" checked>
+                                               name="column_supplied_amount" id="column_supplied_amount" checked>
                                         <label class="form-check-label" for="column_supplied_amount">
                                             {{ trans('supplied-amount') }}
                                         </label>
@@ -295,15 +301,6 @@
                                                id="column_total" checked>
                                         <label class="form-check-label" for="column_total">
                                             {{ trans('total') }}
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4 col-md-3 col-lg-2">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="1" name="column_subaccount"
-                                               id="column_subaccount" checked>
-                                        <label class="form-check-label" for="column_subaccount">
-                                            {{ trans('subaccount') }}
                                         </label>
                                     </div>
                                 </div>
