Mostrar el tamaño del adjunto en la vista DocFiles

--- a/Core/View/Tab/DocFiles.html.twig
+++ b/Core/View/Tab/DocFiles.html.twig
@@ -88,6 +88,7 @@
                                             <i class="fa-solid fa-user" aria-hidden="true"></i> {{ docfile.nick }}
                                         {% endif %}
                                         <i class="fa-solid fa-calendar-alt ms-3" aria-hidden="true"></i> {{ docfile.creationdate }}
+                                        <i class="fa-solid fa-hard-drive ms-3" aria-hidden="true"></i> {{ bytes(file.size) }}
                                     </p>
                                 </div>
                                 <div class="card-footer p-2">
